[package]
name = "deploy"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
arcs-deploy-logging = { version = "0.1.0", path = "arcs-deploy-logging" }
chrono = "0.4.21"
arcs-deploy-docker = { version = "0.1.0", path = "arcs-deploy-docker" }
lazy_static = "1.4.0"
paste = "1.0.8"
smallvec = "1.9.0"
tokio = "1.20.1"
tokio-postgres = "0.7.6"
arcs-yaml-parser = { version = "0.1.0", path = "arcs-yaml" }
dotenv = "0.15.0"
arcs-deploy-shared-structs = { version = "0.1.0", path = "arcs-deploy-shared-structs" }
arcs-deploy-k8s = { version = "0.1.0", path = "arcs-deploy-k8s" }
serde = "1.0.145"
serde_json = "1.0.85"
sha2 = "0.10.6"
hmac = "0.12.1"
hex = "0.4.3"
arcs-deploy-webhook = { version = "0.1.0", path = "arcs-deploy-webhook" } 

[build-dependencies]
walkdir = "2.3.2"
