[package]
name = "arcs-deploy-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.15", features=["json"] }
actix-web = "4.2.1"
tokio = { version = "1.20.1", features = ["full"] }
uuid = { version = "1.3.0", features=["serde"] }
serde = { version = "1.0.152", features = ["derive"] }



arcs-deploy-docker = { version = "0.1.0", path = "./arcs-deploy-docker" }
arcs-deploy-k8s = { version = "0.1.0", path = "./arcs-deploy-k8s" }
arcs-deploy-env = { version = "0.1.0", path = "./arcs-deploy-env" }
arcs-deploy-static = { version = "0.1.0", path="./arcs-deploy-static" }
arcs-yaml-parser = { version = "0.1.0", path = "./arcs-yaml" }
arcs-yaml-editor = { version = "0.1.0", path = "./arcs-yaml-editor" }


shiplift = { git = "https://github.com/fortanix/shiplift", branch = "master" }
dotenv = "0.15.0"
kube = "0.82.0"
chashmap = "2.2.2"
lazy_static = "1.4.0"
const_format = "0.2.30"
serde_json = "1.0.94"
constant_time_eq = "0.2.5"
actix-web-httpauth = "0.8.0"
arcs-logging-rs = "0.1.2"
git2 = { version = "0.18.1", features = ["vendored-libgit2", "vendored-openssl"] }
either = "1.9.0"

[build-dependencies]
walkdir = "2.3.2"

[profile.dev]
split-debuginfo = "unpacked"


[profile.release-overoptimized]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3
debug = true
overflow-checks = false
panic = "unwind"
