[package]
name = "arcs-deploy-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.15", features=["json"] }
actix-web = "4.2.1"

tokio = { version = "1.20.1", features = ["full"] }
uuid = { version = "1.3.0", features=["serde"] }
serde = { version = "1.0.152", features = ["derive"] }


shiplift = { git = "https://github.com/fortanix/shiplift", branch = "master" }
kube = "0.90"

dotenvy = "0.15"
chashmap = "2.2.2"
lazy_static = "1.4.0"
const_format = "0.2.30"
serde_json = "1.0.94"
constant_time_eq = "0.2.5"
actix-web-httpauth = "0.8.0"
git2 = { version = "0.18.1", features = [] }
either = "1.9.0"

[dependencies.arcs_env]
package = "arcs-env-rs"
version = "0.2"

[dependencies.arcs_logging_rs]
package = "arcs-logging-rs"
version = "0.1"

# Docker container management
[dependencies.arcs_docker]
path = "./arcs-deploy-docker"
package = "arcs-deploy-docker"

# K8S cluster management
[dependencies.arcs_k8s]
path = "./arcs-deploy-k8s"
package = "arcs-deploy-k8s"

# Uploading and loading of static files
[dependencies.arcs_static]
path = "./arcs-deploy-static"
package = "arcs-deploy-static"

# Parsing YAML file cfg
[dependencies.yaml]
path = "./arcs-yaml"
package = "arcs-ctf_yaml-parser"

# Editing YAML cfgs programmatically
[dependencies.yaml_editor]
path = "./arcs-yaml-editor"
package = "arcs-yaml-editor"




#
# Build dependencies
#

# Loading .env files
[build-dependencies.dotenvy]
version = "0.15"

# Parsing JSON
[build-dependencies.serde_json]
version = "1"

# Making HTTP requests
[build-dependencies.reqwest]
version = "0.12"
features = ["blocking", "http2"]
default_features = false

# Parsing JSON Schemas
[build-dependencies.schemars]
version = "0.8"
features = ["uuid1", "chrono"]
default_features = false

# Transforms JSON Schemas into Rust types
[build-dependencies.typify]
version = "0.0.16"
default_features = false

# Parsing rust code into an AST
[build-dependencies.syn]
version = "2"
default_features = false
features = ["parsing"]

# Formatting parsed Rust code to a more readable format
[build-dependencies.prettyplease]
version = "0.2.15"



#
# Profiles
#

[profile.dev]
split-debuginfo = "unpacked"

[profile.release-overoptimized]
inherits = "release"
# codegen-units = 1
lto = "fat"
opt-level = 3
debug = true
overflow-checks = false
panic = "unwind"
