[package]
name = "arcs-deploy-k8s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = {version="0.18.0", features=["v1_24"]}
kube-runtime = "0.82.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.10"
tokio = { version = "1.20.1", features=["full"] }
kube = "0.82.0"
futures = "0.3.23"

serde_json="1"
dotenvy = "0.15"
base64 = "0.21.0"

[dependencies.arcs_env]
package = "arcs-env-rs"
version = "0.2"

[dependencies.arcs_logging_rs]
package = "arcs-logging-rs"
version = "0.1"
