[package]
name = "arcs-deploy-static"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.15", features=["json"] }
tokio = { version = "1.20.1", features=["full"] }
dotenv = "0.15.0"

# Docker-related
shiplift = { git = "https://github.com/fortanix/shiplift", branch = "master" }
tar = "0.4.38"

arcs-logging-rs = "0.1.2"
arcs-deploy-env = { version = "0.1.0", path = "../arcs-deploy-env" }
arcs-yaml-parser = { version = "0.1.0", path = "../arcs-yaml" }
arcs-deploy-docker = { version = "0.1.0", path = "../arcs-deploy-docker" }

rust-s3 = "0.33.0"