[package]
name = "arcs-deploy-static"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.15", features=["json"] }
tokio = { version = "1.20.1", features=["full"] }
dotenvy = "0.15"

# Docker-related
shiplift = { git = "https://github.com/fortanix/shiplift", branch = "master" }

tar = "0.4.38"
rust-s3 = "0.33.0"


[dependencies.arcs_env]
package = "arcs-env-rs"
version = "0.2"

[dependencies.arcs_logging_rs]
package = "arcs-logging-rs"
version = "0.1"

# Docker container management
[dependencies.arcs_docker]
path = "../arcs-deploy-docker"
package = "arcs-deploy-docker"

# Parsing YAML file cfg
[dependencies.yaml]
path = "../arcs-yaml"
package = "arcs-ctf_yaml-parser"
