[package]
name = "arcs-deploy-webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.13"
actix-web = "4.2.1"
tokio = { version = "1.20.1", features = ["full"] }
uuid = "1.2.2"
serde = { version = "1.0.152", features = ["derive"] }
arcs-deploy-logging = { version = "0.1.0", path = "../arcs-deploy-logging" }
arcs-deploy-docker = { version = "0.1.0", path = "../arcs-deploy-docker" }
arcs-deploy-k8s = { version = "0.1.0", path = "../arcs-deploy-k8s" }
shiplift = { git = "https://github.com/charlolizard/shiplift", branch = "master" }
dotenv = "0.15.0"